--- a/app/src/main/res/layout/activity_new_exercise.xml
+++ b/app/src/main/res/layout/activity_new_exercise.xml
@@ -6,28 +6,62 @@
     android:layout_height="match_parent"
     tools:context="view.NewExerciseActivity">
 
-    <Button
-        android:id="@+id/button1"
+    <TextView
+        android:id="@+id/text_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="216dp"
-        android:onClick="novoExercicioRepeticao"
-        android:text="Novo Repetição"
+        android:layout_marginTop="32dp"
+        android:text="Novo Treino"
+        android:textSize="36sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
+        android:id="@+id/button1"
+        android:layout_width="220dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="132dp"
+        android:onClick="novoExercicioRepeticao"
+        android:text="Novo Repetição"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:layout_width="140dp"
+        android:layout_height="121dp"
+        android:layout_marginEnd="36dp"
+        android:src="@drawable/exercicio_repeticao"
+        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button1"
+        app:layout_constraintVertical_bias="0.701" />
+
+    <Button
         android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="112dp"
+        android:layout_width="220dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="192dp"
         android:onClick="novoExercicioTempo"
         android:text="Novo Tempo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button1" />
+
+
+    <ImageView
+        android:layout_width="140dp"
+        android:layout_height="121dp"
+        android:src="@drawable/exercicio_tempo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button2"
+        app:layout_constraintVertical_bias="0.294" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
