--- a/app/src/main/res/layout/celula_exercicio_repeticao.xml
+++ b/app/src/main/res/layout/celula_exercicio_repeticao.xml
@@ -7,8 +7,8 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="393dp"
+        android:layout_height="87dp"
         android:layout_margin="8dp"
         app:cardCornerRadius="3dp"
         app:cardElevation="5dp"
@@ -20,11 +20,10 @@
         <TextView
             android:id="@+id/textview_nome"
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_height="90dp"
             android:gravity="center_vertical"
             android:padding="8dp"
             android:textSize="20sp" />
-
 
     </androidx.cardview.widget.CardView>
 
